# magnet

./: .env.example  README.md  pyproject.toml
.magnet/colbert/indexes/Jobs/: 0.codes.pt  0.metadata.json  0.residuals.pt  avg_residual.pt  buckets.pt  centroids.pt  collection.json  doclens.0.json  ivf.pid.pt  metadata.json  plan.json
magnet/: __init__.py  neural_seach.py
magnet/data/: corpus_preprocessor.py  preprocessor.py
magnet/data/chunking/: qa_chunking.py  text_splitter_chunking.py
magnet/llm/: openai_llm.py
magnet/models/: colbert_model.py
test/: create_index.py  search.py
